[tool.poetry]
name = "flask-zs"
version = "1.0.5"
description = "A helpers for Flask."
authors = ["codeif <me@codeif.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/codeif/flask-zs"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "*"
requests = "*"
zs-mixins = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.1"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[tool.poetry.scripts]
collect-models = "flask_zs.bin.collect_models:main"

[tool.poetry.extras]
mixins = ["zs-mixins"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
